--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -1,24 +1,33 @@
 .navBar{
     width: 100%;
     height: 60px;
+    background-color: rgba(0,0,0,0.2) !important;
+    padding: 0 5% 0 5%;
 }
-.homeTopBackground{
+.homeTopBackground {
     background-size: cover;
-    background: url("../Images/homeTopBackground.jpg") no-repeat center;
     width: 100%;
-    height: 450px;
+    height: 100%;
     margin-top: -60px;
+    background: url("../Images/back.JPG") no-repeat fixed center;
 }
+
 .homeTopBackgroundOverlay{
     background-size: cover;
-    background: rgba(0,0,0,0.2);
+    background: rgba(0,0,0,0.4);
     width: 100%;
-    height: 510px;
+    height: 710px;
     margin-top: -60px;
 }
+
 .topBarContent {
     position: absolute;
-    top: 50%;
+    width: 70%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.carouselImg{
+    width: 100%;
+    height: 430px;
 }
