--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -16,5 +16,11 @@
 @media (min-width: 1400px) {
     .topBarContent{
         width: 30%;
+        top: 30%;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .topBarContent{
+        top: 30%;
     }
 }
