--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -15,12 +15,14 @@
 }
 @media (min-width: 1400px) {
     .topBarContent{
-        width: 30%;
-        top: 30%;
+        width: 36%;
     }
 }
 @media only screen and (max-width: 400px) {
     .topBarContent{
-        top: 30%;
+        top: 58%;
+    }
+    .carouselImg{
+        height: 370px;
     }
 }
