--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -43,14 +43,13 @@
     background-size: cover;
     width: 100%;
     height: 100%;
-    margin-top: -60px;
-    background: url("../Images/back.JPG") no-repeat fixed center;
+    background: url("../Images/banner.jpg") no-repeat fixed center;
     padding: 0;
 }
 
 .homeTopBackgroundOverlay{
     background-size: cover;
-    background: rgba(0,0,0,0.4);
+    background: rgba(0,0,0,0.1);
     width: 100%;
     height: 710px;
     margin: -60px 0 0 0;
