--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -30,3 +30,19 @@
     }
 
 }
+
+@media (max-width: 600px) {
+    .smallNav{
+        background-color: white!important;
+    }
+    .navLink,.navLinkScroll{
+        color: black!important;
+    }
+    .navLink:hover, .navLinkScroll:hover{
+        border: none!important;
+        background-color: rgba(0, 0, 0, 0.49) !important;
+        color: white!important;
+        padding: 5px;
+        transition: 0.4s;
+    }
+}
