--- a/src/Assets/CSS/SideBar.css
+++ b/src/Assets/CSS/SideBar.css
@@ -4,8 +4,9 @@
 
 
 .practiceList{
-    padding: 2px;
+    padding: 0;
     margin-top: 60px;
+    width: 18px;
 }
 .practiceTitle{
     margin-left: -1%;
@@ -14,32 +15,36 @@
     font-weight: 600;
 }
 .sidebar {
-    padding: 10px;
+    padding: 0;
     max-height: calc(100vh - 56px);
     overflow-y: auto;
 }
 .sidebar a {
-    padding: 2px;
     text-decoration: none;
     color: #333;
 }
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 56px;
-        bottom: 0;
-        left: 0;
-        width:15%;
-        overflow-y: auto;
-        border-right: 1px solid #ccc;
-    }
-    .practiceTitle{
-        margin-left: -5%;
-    }
-    .sidebar.show {
-        display: block;
-    }
+
+.sidebar a {
+    padding: 2px 0 0 0;
 }
+
+/*@media (min-width: 768px) {*/
+/*    .sidebar {*/
+/*        position: fixed;*/
+/*        top: 56px;*/
+/*        bottom: 0;*/
+/*        left: 0;*/
+/*        width:15%;*/
+/*        overflow-y: auto;*/
+/*        border-right: 1px solid #ccc;*/
+/*    }*/
+/*    .practiceTitle{*/
+/*        margin-left: -5%;*/
+/*    }*/
+/*    .sidebar.show {*/
+/*        display: block;*/
+/*    }*/
+/*}*/
 .mySlides img{
     width: 100%;
     height: auto;
