--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -31,12 +31,17 @@
 
 }
 
-@media (max-width: 600px) {
+@media (max-width: 575px) {
     .smallNav{
         background-color: white!important;
     }
+    .nav{
+        background-color: black!important;
+        width: 100px;
+        text-align: center;
+    }
     .navLink,.navLinkScroll{
-        color: black!important;
+        color: white!important;
     }
     .navLink:hover, .navLinkScroll:hover{
         border: none!important;
@@ -45,4 +50,18 @@
         padding: 5px;
         transition: 0.4s;
     }
+}
+
+::-webkit-scrollbar {
+    width: 1px;
+}
+
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
 }
