--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -49,7 +49,7 @@
 
 .homeTopBackgroundOverlay{
     background-size: cover;
-    background: rgba(0,0,0,0.1);
+    background: rgba(0,0,0,0.5);
     width: 100%;
     height: 710px;
     margin: -60px 0 0 0;
@@ -59,7 +59,7 @@
 .topBarContent {
     position: absolute;
     width: 70%;
-    top: 60%;
+    top: 17rem;
     left: 50%;
     transform: translate(-50%, -50%);
 }
