--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -1,14 +1,19 @@
-@media only screen and (max-width: 400px) {
-    .carouselImg{
-        height: 370px;
-    }
-    .recentRight{
-        margin-top: 20px !important;
-    }
-
+::-webkit-scrollbar {
+    width: 1px;
 }
 
-@media (max-width: 575px) {
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+
     .smallNav{
         background-color: white!important;
     }
@@ -27,23 +32,7 @@
         padding: 5px;
         transition: 0.4s;
     }
-}
 
-::-webkit-scrollbar {
-    width: 1px;
-}
-
-
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 5px;
-}
-
-@media only screen and (max-width: 600px) {
     .topBarContent {
         position: absolute;
         width: 100%;
@@ -51,6 +40,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
     .globalTitle{
         color: rgba(0,0,0,1);
         font-family: Montserrat, serif;
@@ -62,5 +52,19 @@
         font-family: Raleway, serif;
         font-size: 14px;
         font-weight: 500;
+    }
+
+    .title{
+        color: white;
+        font-size: 18px;
+        font-family: Popin, serif;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
+    .subTitle{
+        color: white;
+        font-size: 16px;
+        font-family: Popin, serif;
+        font-weight: 400;
     }
 }
