--- a/src/Assets/CSS/SideBarResponsive.css
+++ b/src/Assets/CSS/SideBarResponsive.css
@@ -4,6 +4,7 @@
     width: calc(100% - 100px);
     top: 70px;
     padding: 0 20px 0 20px!important;
+    margin:0!important;
 }
 
 @media (max-width: 600px) {
@@ -16,8 +17,8 @@
 
     .slidePage {
         position: absolute!important;
-        left: 122px!important;
-        width: calc(100% - 122px) !important;
+        left: 100px!important;
+        width: calc(100% - 100px) !important;
         top: 70px!important;
         padding: 0 5px 0 5px !important;
     }
