--- a/src/Assets/CSS/SideBarResponsive.css
+++ b/src/Assets/CSS/SideBarResponsive.css
@@ -1,12 +1,3 @@
-.slidePage {
-    position: absolute;
-    left: 100px;
-    width: calc(100% - 100px);
-    top: 70px;
-    padding: 0 20px 0 20px!important;
-    margin:0!important;
-}
-
 @media (max-width: 600px) {
     .practiceTitle {
         padding-left: 0!important;
@@ -14,17 +5,8 @@
         font-size: 15px!important;
         font-weight: 600 !important;
     }
-
-    .slidePage {
-        position: absolute!important;
-        left: 100px!important;
-        width: calc(100% - 100px) !important;
-        top: 70px!important;
-        padding: 0 5px 0 5px !important;
-    }
-
     .sidebar {
-        width: 80px!important;
+        width: 84px !important;
         padding: 0 0 0 5px!important;
         max-height: calc(100vh - 56px) !important;
         overflow-y: auto!important;
@@ -37,5 +19,15 @@
         font-size: 15px!important;
         font-weight: 500!important;
         margin: 0!important;
+    }
+    .practiceSlider{
+        width: 84px !important;
+        float: left;
+    }
+    .practiceRightPage{
+        padding: 1px 5px 1px 5px!important;
+        width: calc(100% - 84px) !important;
+        float: right;
+        margin-top: 69px;
     }
 }
