--- a/src/Assets/CSS/SliderCode.css
+++ b/src/Assets/CSS/SliderCode.css
@@ -1,3 +1,6 @@
-.sliderCode{
-
+.code{
+    border:1px solid #282c34;
+    max-height: 265px;
+    overflow-y: auto;
+    padding: 2px 8px 2px 8px;
 }
