--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -78,7 +78,7 @@
 .subTitle{
     color: white;
     font-size: 20px;
-    font-family: Popin, serif;
+    font-family: Montserrat, serif;
     font-weight: 400;
 }
 .contactBtn{
