--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -128,3 +128,19 @@
     color: rgba(0,0,0,0.8);
     line-height: 1.4rem
 }
+.privacyTop{
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    background: url("../Images/banner.jpg") no-repeat fixed center;
+    padding: 0;
+}
+
+.homeTopBackgroundOverlay{
+    background-size: cover;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 710px;
+    margin: -60px 0 0 0;
+    padding: 0;
+}
