--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -16,11 +16,42 @@
 
     .smallNav{
         background-color: white!important;
+        margin-right: 20px;
+    }
+    .smallNavScroll{
+        background-color: black!important;
+        margin-right: 20px;
     }
     .nav{
         background-color: black!important;
-        width: 100px;
+        width: 100%;
         text-align: center;
+        margin: 0!important;
+        padding: 0!important;
+    }
+    .navLink{
+        color: black!important;
+    }
+    .navScroll{
+        background-color: black!important;
+        width: 100%;
+        text-align: center;
+        margin: 0!important;
+        padding: 0!important;
+    }
+    .navBar{
+        background-color: black!important;
+        width: 100%;
+        text-align: center;
+        margin: 0!important;
+        padding: 0;
+    }
+    .navBarScroll{
+        width: 100%;
+        height: 60px;
+        padding: 0;
+        background-color:white !important;
+        transition: 0.5s;
     }
     .navLink,.navLinkScroll{
         color: white!important;
@@ -36,7 +67,7 @@
     .topBarContent {
         position: absolute;
         width: 100%;
-        top: 18rem;
+        top: 12rem;
         left: 50%;
         transform: translate(-50%, -50%);
     }
@@ -52,6 +83,14 @@
         font-family: Raleway, serif;
         font-size: 14px;
         font-weight: 500;
+    }
+
+    .homeTopBackground {
+        height: 20rem;
+    }
+
+    .homeTopBackgroundOverlay{
+        height: 20rem;
     }
 
     .title{
