--- a/src/Assets/CSS/SideBarResponsive.css
+++ b/src/Assets/CSS/SideBarResponsive.css
@@ -30,6 +30,9 @@
         float: right;
         margin-top: 69px;
     }
+    .text{
+        left: calc(50% - 42px) !important;
+    }
     .displayModal{
         left: 84px!important;
         width: calc(100% - 84px ) !important;
