--- a/src/Assets/CSS/SliderCode.css
+++ b/src/Assets/CSS/SliderCode.css
@@ -4,3 +4,11 @@
     overflow-y: auto;
     padding: 2px 8px 2px 8px;
 }
+
+
+@media (min-width: 767px) {
+    .borderXNone{
+        border-left: none;
+        border-right: none;
+    }
+}
