--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@ body {
 .code::-webkit-scrollbar-track {
     background-color: #f0f0f0;
 }
+
+.Xoverflow::-webkit-scrollbar {
+    height: 2px;
+}
+.Xoverflow{
+    padding: 0!important;
+    margin: 0!important;
+}
