--- a/src/Assets/CSS/SliderCode.css
+++ b/src/Assets/CSS/SliderCode.css
@@ -1,8 +1,8 @@
 .code{
     border:1px solid #282c34;
-    max-height: 265px;
+    height: 300px;
     overflow-y: auto;
-    padding: 2px 8px 2px 8px;
+    padding: 4px;
 }
 
 
