--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -64,11 +64,11 @@
 
 .PrivacyTopBarContent {
     position: absolute;
-    width: 70%;
-    top: 13rem;
-    left: 60%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    top: 11rem;
+    text-align: center;
 }
+
 .carouselImg{
     width: 100%;
     height: 430px;
@@ -165,3 +165,27 @@
     color: #0D6EFD !important;
     transition: 0.2s;
 }
+.aboutTop {
+    background-size: cover;
+    width: 100%;
+    height: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("../Images/backgroundPhoto.jpg");
+}
+.aboutImg{
+    width: 100%;
+    height: auto;
+    margin-bottom: 5px;
+}
+.aboutCard{
+    padding: 4px;
+    cursor: pointer;
+}
+.aboutCard:hover{
+    box-shadow: -1px 2px 23px 9px rgba(0,0,0,1);
+    -webkit-box-shadow: -1px 2px 23px 9px rgba(0,0,0,0.37);
+    -moz-box-shadow: -1px 2px 23px 9px rgba(0,0,0,0.37);
+    transition: 0.5s!important;
+}
+
