--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -195,4 +195,12 @@
 .footer div{
     width: 33.33% !important;
 }
-
+.command{
+    background-color: rgba(0,0,0,0.3);
+    padding: 1px 5px 1px 5px;
+    border-radius: 4px;
+}
+.projectImg{
+    width: 100%;
+    height: auto;
+}
