--- a/src/Assets/CSS/Project.css
+++ b/src/Assets/CSS/Project.css
@@ -2,6 +2,10 @@
     cursor: pointer;
     background-color: rgba(0,0,0,0.2) !important;
 }
+.projectBody:hover{
+    background-color: rgba(0,0,0,0.5) !important;
+    transition: 0.4s;
+}
 .projectImg{
     width: 100%;
     height: auto;
