--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -13,6 +13,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+    .mt-sm-2{
+        margin-top: 10px!important;
+    }
 
     .smallNav{
         background-color: white!important;
