--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -2,7 +2,6 @@
     width: 1px;
 }
 
-
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
@@ -12,51 +11,57 @@
     border-radius: 5px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     .mt-sm-2{
         margin-top: 10px!important;
     }
-
     .smallNav{
         background-color: white!important;
         margin-right: 20px;
+        color: rgba(0,0,0,0.9) !important;
     }
     .smallNavScroll{
         background-color: black!important;
         margin-right: 20px;
+        color: white!important;
+    }
+    .logoImg{
+        max-height: 50px;
     }
     .nav{
-        background-color: black!important;
+        background-color: rgba(0,0,0,0.7)!important;
         width: 100%;
         text-align: center;
         margin: 0!important;
         padding: 0!important;
-    }
-    .navLink{
-        color: black!important;
     }
     .navScroll{
-        background-color: black!important;
+        background-color: white!important;
         width: 100%;
         text-align: center;
         margin: 0!important;
         padding: 0!important;
+        border: 1px solid rgba(0,0,0,0.3);
     }
     .navBar{
-        background-color: black!important;
+        background-color: rgba(0,0,0,0.7)!important;
         width: 100%;
         text-align: center;
+        max-height: 50px!important;
         margin: 0!important;
         padding: 0;
     }
     .navBarScroll{
         width: 100%;
-        height: 60px;
+        max-height: 50px;
         padding: 0;
         background-color:white !important;
         transition: 0.5s;
     }
-    .navLink,.navLinkScroll{
+    .navLinkScroll{
+        color: black!important;
+    }
+    .navLink{
         color: white!important;
     }
     .navLink:hover, .navLinkScroll:hover{
