--- a/src/Assets/CSS/Login.css
+++ b/src/Assets/CSS/Login.css
@@ -27,12 +27,12 @@
 
 .displayModal{
     position: fixed;
-    z-index: 22;
     left: 141px;
-    top: 80px;
+    top: 60px;
     width: calc(100% - 161px );
-    height: auto;
-    overflow: auto;
+    max-height: 100%;
+    bottom: 20px;
+    overflow-y: auto;
     background-color: rgba(255,255,255,1);
     border: 2px solid silver;
     padding: 20px 0 20px 0;
@@ -65,7 +65,7 @@
    border: none;
 }
 .submitBtn:hover{
-    background-color: #CCCCCC;
+    background-color: rgba(0,0,0,0.7);
     color: white;
     transition: 0.5s;
 }
