--- a/src/Assets/CSS/Login.css
+++ b/src/Assets/CSS/Login.css
@@ -25,18 +25,35 @@
     transition: 0.5s;
 }
 
-.displayModal{
+/*.displayModal{*/
+/*    position: fixed;*/
+/*    left: 141px;*/
+/*    top: 65px;*/
+/*    width: 70%;*/
+/*    height: auto;*/
+/*    bottom: 20px;*/
+/*    margin: 0 auto;*/
+/*    overflow-y: auto;*/
+/*    background-color: rgba(255,255,255,1);*/
+/*    border: 2px solid silver;*/
+/*    padding: 20px 0 20px 0;*/
+/*}*/
+
+.displayModal {
     position: fixed;
-    left: 141px;
-    top: 60px;
-    width: calc(100% - 161px );
-    max-height: 100%;
-    bottom: 20px;
+    left: calc(50% + 25px);
+    top: calc(50% + 20px);
+    transform: translate(-50%, -50%);
+    width: 70%;
+    max-width: calc(100% - 141px);
+    height: auto;
+    max-height: 500px;
     overflow-y: auto;
     background-color: rgba(255,255,255,1);
     border: 2px solid silver;
-    padding: 20px 0 20px 0;
+    padding: 20px;
 }
+
 
 .modalContent{
     text-align: left;
