--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -18,12 +18,10 @@
     .smallNav{
         background-color: white!important;
         margin-right: 20px;
-        color: rgba(0,0,0,0.9) !important;
     }
     .smallNavScroll{
-        background-color: black!important;
+        border: 1px solid black;
         margin-right: 20px;
-        color: white!important;
     }
     .logoImg{
         max-height: 50px;
@@ -39,17 +37,14 @@
         background-color: white!important;
         width: 100%;
         text-align: center;
-        margin: 0!important;
-        padding: 0!important;
         border: 1px solid rgba(0,0,0,0.3);
     }
     .navBar{
         background-color: rgba(0,0,0,0.7)!important;
         width: 100%;
         text-align: center;
-        max-height: 50px!important;
-        margin: 0!important;
         padding: 0;
+        max-height: 50px!important;
     }
     .navBarScroll{
         width: 100%;
@@ -60,18 +55,22 @@
     }
     .navLinkScroll{
         color: black!important;
+        width: 100%;
     }
     .navLink{
         color: white!important;
+        width: 100%;
     }
-    .navLink:hover, .navLinkScroll:hover{
-        border: none!important;
-        background-color: rgba(0, 0, 0, 0.49) !important;
-        color: white!important;
-        padding: 5px;
+    .navLink:hover{
+        color: green!important;
+        border: 1px dotted white;
         transition: 0.4s;
     }
-
+    .navLinkScroll:hover{
+        color: blue;
+        border: 1px dotted black;
+        transition: 0.4s;
+    }
     .globalTitle{
         color: rgba(0,0,0,1);
         font-family: Montserrat, serif;
