--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -22,6 +22,9 @@
     padding: 0 5% 0 5%;
     background-color:#ffffff !important;
     transition: 0.5s;
+    box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.2);
 }
 .navLinkScroll{
     color: rgba(0,0,0,0.9) !important;
@@ -195,10 +198,11 @@
     padding: 1px 5px 1px 5px;
     border-radius: 4px;
 }
-.projectImg{
-    width: 100%;
-    height: auto;
-}
 .copyRight{
     background-color: rgba(0,0,0,0.4);
+}
+.projectCardFooter{
+    background-color: #059862;
+    margin: 0;
+    padding: 10px 16px;
 }
