--- a/src/Assets/CSS/Project.css
+++ b/src/Assets/CSS/Project.css
@@ -1,6 +1,7 @@
 .projectBody{
     cursor: pointer;
     background-color: rgba(0,0,0,0.2) !important;
+    margin-top: 16px;
 }
 .projectBody:hover{
     background-color: rgba(0,0,0,0.5) !important;
@@ -8,6 +9,5 @@
 }
 .projectImg{
     width: 100%;
-    height: auto;
-    max-height: 400px;
+    height: 200px;
 }
