--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -59,12 +59,12 @@
     background-size: cover;
     width: 100%;
     height: 25rem;
-    background: url("../Images/banner.png") no-repeat fixed center;
+    background: url("../Images/bannerSS.png") no-repeat fixed center;
 }
 
 .homeTopBackgroundOverlay{
     background-size: cover;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.7);
     width: 100%;
     height: 25rem;
     position: relative;
@@ -205,4 +205,21 @@
     background-color: #059862;
     margin: 0;
     padding: 10px 16px;
+}
+.caroImg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.slider-container {
+    width: 100%;
+    padding: 0 10%;
+    margin-bottom: -18px;
+    overflow-x: hidden;
+    text-align: center;
 }
