--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -57,12 +57,14 @@
 
 .homeTopBackground {
     background-size: cover;
+    margin-top: -50px;
     width: 100%;
     height: 25rem;
     background: url("../Images/bannerSS.png") no-repeat fixed center;
 }
 
 .homeTopBackgroundOverlay{
+    margin-top: -50px;
     background-size: cover;
     background: rgba(0,0,0,0.7);
     width: 100%;
