--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -69,7 +69,7 @@
     .globalTitle{
         color: rgba(0,0,0,1);
         font-family: Montserrat, serif;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 500;
     }
     .globalSubTitle{
@@ -80,10 +80,11 @@
     }
 
     .topBarContent {
-        top: 12.5rem;
+        margin-top: 42px;
+        top: 10.5rem;
     }
     .globalDescription{
-        line-height: 1.4rem;
+        line-height: 1.2rem;
     }
     .title{
         color: white;
