--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -60,7 +60,7 @@
     margin-top: -50px;
     width: 100%;
     height: 25rem;
-    background: url("../Images/bannerSS.png") no-repeat fixed center;
+    background: url("../Images/banner.png") no-repeat fixed center;
 }
 
 .homeTopBackgroundOverlay{
