show more added

--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -226,3 +226,10 @@
     overflow-x: hidden;
     text-align: center;
 }
+.showMore{
+    color: blue;
+    cursor: pointer;
+    text-decoration: underline;
+    display: inline;
+    white-space: nowrap;
+}
