--- a/src/Assets/CSS/Academic.css
+++ b/src/Assets/CSS/Academic.css
@@ -18,6 +18,7 @@
     scrollbar-width: none;
     border: 1px solid rgba(0,0,0,0.5);
     background-color: #059862;
+    margin-bottom: 0;
 }
 .hslider li{
     text-decoration: none;
