Array dynamic done

--- a/src/Assets/CSS/Custom.css
+++ b/src/Assets/CSS/Custom.css
@@ -104,7 +104,7 @@
 .subTitle{
     color: white;
     font-size: 20px;
-    font-family: Montserrat, serif;
+    font-family: Roboto, serif;
     font-weight: 400;
 }
 .contactBtn{
