--- a/src/Assets/CSS/Responsive.css
+++ b/src/Assets/CSS/Responsive.css
@@ -88,7 +88,7 @@
         font-size: 14px;
     }
     .title{
-        color: white;
+        color: black;
         font-size: 18px;
         font-family: Popin, serif;
         font-weight: 500;
